--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.12.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
