--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^18.0.1",
+    "@types/react-dom": "^18.0.0",
     "css-loader": "^6.7.1",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
@@ -26,6 +29,7 @@
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
     "react-refresh": "^0.12.0",
+    "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
